# SocNetAlgsOnGPU

./: .gitignore  CMakeLists.txt  Makefile  README.adoc  README.md  betweenness.cpp  betweenness.cu  cuda_utils.cuh  mformats.h  utils.h
.run/: All in test_bc_comp.run.xml  All in test_cc.run.xml  All in test_matrix_io.run.xml  All in test_mod_bc.run.xml  All in test_spmatops.run.xml  serial.run.xml
dataset/: CMakeLists.txt  Makefile  graph_gen.cpp  graph_gen_boost.cpp  ufl.mk
dataset/Erdos02/: Makefile
dataset/USpowerGrid/: Makefile
dataset/as-22july06/: Makefile
dataset/ca-AstroPh/: Makefile
dataset/ca-CondMat/: Makefile
dataset/ca-GrQc/: Makefile
dataset/ca-HepPh/: Makefile
dataset/ca-HepTh/: Makefile
dataset/delaunay_n14/: Makefile
dataset/examples/: a_matrix.mtx  b_matrix.mtx  c_matrix.mtx  q_matrix.mtx  r_matrix.mtx  s-dir-con1.mtx  s-und-con1.mtx  s-und-unc1-wsl.mtx  s-und-unc1.mtx  s-und-unc2.mtx
dataset/synthetic/: rnd-er.mtx  rnd-sf.mtx  rnd-sw.mtx
datasets/: README.adoc  common.mk  graph_gen.cpp  ufl.mk
doc/: Makefile  bibliography.bib  brief.adoc  custom-theme.yml  report-theme.yml  report.adoc
docs/: bibliography.bib  custom-theme.yml  pseudo.rb  report.adoc
include/: bc.h  bc_ep_kernel.cuh  bc_kernels.cuh  bc_kernels_compressed.cuh  bc_kernels_pitched.cuh  bc_par.h  bc_statistics.h  bc_vp_kernel.cuh  bc_vp_kernels.cuh  bc_we_kernel.cuh  bc_we_kernel_nopitch.cuh  bc_we_kernels.cuh  bc_we_kernels_pitched.cuh  centralities.h  cl.h  cl_kernels.cuh  cli.cuh  cli.h  common.h  degree.h  device_props.cuh  ecc.h  errcheck.cuh  gkernels.cuh  graphs.h  matds.h  matio.h  matstorage.h  profiler.h  spmatops.h  spvb.h  tests.h  timing.cuh  utils.h
lib/doctest/: doctest.h
lib/mmio/: CMakeLists.txt  Makefile  mmio.c  mmio.h
lib/zf_log/: Makefile
libs/mmio/: mmio.c  mmio.h
samples/: random_gen.cu  reduction.cu
script/: Gemfile  build_snap.sh  gstats.sh  histogram.plot  perf_eval.sh  pseudocode.rb  valgrind.sh  validate-font.rb
scripts/: Gemfile  figure1.plot  format.sh  histogram.gp  line_chart.plot
src/: CMakeLists.txt  Makefile  bc.cpp  bc.h  bc_ep_kernel.cu  bc_kernels.cu  bc_kernels_compressed.cu  bc_kernels_pitched.cu  bc_par.cpp  bc_statistics.cpp  bc_vp_kernel.cu  bc_vp_kernels.cu  bc_we_kernel.cu  bc_we_kernel_nopitch.cu  bc_we_kernels.cu  bc_we_kernels_pitched.cu  betweenness.cu  cl.cpp  cl_kernels.cu  cli.cpp  cli.cu  common.cpp  degree.cpp  device_props.cu  device_props.cuh  ecc.cpp  gkernels.cu  graph_gen.cpp  graphs.cpp  main.cpp  matds.cpp  matio.cpp  matio.h  matstorage.cpp  matstorage.h  profiler.cpp  sna_bc.cu  spmatops.cpp  spvb.cpp  timing.cuh  (+2 more)
test/: CMakeLists.txt  benchmark_bc.cpp  test_cc.cpp  test_matrix_io.cpp  test_mod_bc.cpp  test_serial_bc.cpp  test_spmatops.cpp
tests/: CMakeLists.txt  test_cc.cpp  test_matrix_io.cpp  test_mod_bc.cpp  test_serial_bc.cpp
